--- a/recipebox.client/src/App.css
+++ b/recipebox.client/src/App.css
@@ -473,6 +473,62 @@ button {
 	flex-basis: 20%;
 }
 
+/* Cards */
+.cards {
+	margin: 0 auto;
+	max-width: 1700px;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(550px, 1fr));
+	grid-area: 20px;
+	font-family: sans-serif;
+	column-gap: 10px;
+	row-gap: 20px;
+}
+
+.card__info {
+	padding: 15px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	color: #555555;
+	background: #eeeeee;
+	font-size: 0.8em;
+	border-bottom: 2px solid #cccccc;
+}
+
+.card {
+	box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+}
+
+.card__image {
+	width: 100%;
+	display: block;
+}
+
+.card__content {
+	line-height: 1.5;
+	font-size: 0.9em;
+	padding: 15px;
+	background: #fafafa;
+}
+
+.card__content > p:first-of-type {
+	margin-top: 0;
+}
+
+.card__content > p:last-of-type {
+	margin-top: 0;
+}
+
+.card__link {
+	color: #64968c;
+	text-decoration: none;
+}
+
+.card__link:hover {
+	text-decoration: underline;
+}
+
 /* Posts Page */
 .post-form .post-form-header {
 	background: var(--primary-color);
@@ -481,13 +537,20 @@ button {
 
 .post {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	/* grid-template-rows: repeat(3, 1fr); */
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 1fr);
 	grid-auto-rows: 500px;
 	grid-auto-columns: 500px;
-	padding: 0.002rem;
-	column-gap: 10px;
+	padding: 0.5rem;
+	column-gap: 2px;
+	padding-left: 2.7%;
+	/* resize: both; */
 	/* border: #0077b5; */
+}
+
+.post .border {
+	border-color: #333;
+	border-style: solid;
 }
 
 .post > div:first-child {
@@ -518,7 +581,7 @@ button {
 }
 
 .post .post-date {
-	color: olivedrab;
+	color: rgba(5, 13, 14, 0.575);
 	font-size: 0.8rem;
 	margin-bottom: 0.5rem;
 }
