--- a/recipebox.client/src/App.css
+++ b/recipebox.client/src/App.css
@@ -473,6 +473,87 @@ button {
 	flex-basis: 20%;
 }
 
+/* Posts search box, create ands filter */
+.post__navbar {
+	margin: 0 auto;
+	align-items: center;
+	display: grid;
+	color: purple;
+	max-width: 1500px;
+	/* grid-area: 20px; */
+	justify-content: center;
+	grid-template-columns: repeat(auto-fill);
+	line-height: 5.5;
+	font-size: 0.9em;
+	padding: 10px;
+	background: rgba(221, 212, 212, 0.623);
+	padding-bottom: 5px;
+	margin-bottom: 10px;
+	border-radius: 5px;
+	overflow: hidden;
+	position: relative;
+	display: grid;
+	grid-template-columns: repeat(auto-fill);
+	grid-area: 20px;
+}
+
+.posts > input {
+	line-height: 15px;
+	color: peru;
+	font-size: 15px;
+}
+
+.posts > button:first-of-type {
+	background-color: #4caf50;
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+}
+
+/* Search bar */
+.search__wrapper {
+	line-height: 1.5;
+	/* max-width: 60%; */
+	width: 550px;
+	padding: 15px;
+	border-radius: 5px;
+	display: flex;
+	background: rgba(172, 155, 155, 0.6);
+	justify-content: space-between;
+	position: relative;
+}
+
+.search__wrapper > input:first-of-type {
+	width: 85%;
+	padding: 15px 20px;
+	border: none;
+	border-radius: 5px;
+	font-weight: bold;
+	font-size: 1.2em;
+}
+
+.searchbtn {
+	background: #8df074;
+	width: 10%;
+	border-radius: 5px;
+	position: relative;
+	cursor: pointer;
+}
+
+.searchbtn .fas {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-size: 18px;
+}
+
 /* Cards */
 .cards {
 	margin: 0 auto;
