--- a/recipebox.client/src/App.css
+++ b/recipebox.client/src/App.css
@@ -447,20 +447,19 @@ button {
 	margin-bottom: 8px;
 }
 
-.post__submit {
+.post__navbar .post__submit {
 	margin: auto;
-	justify-content: right;
-	width: 5%;
-	/* display: inline-block; */
-	/* margin-right: 0.0001px; */
+	float: left;
+	width: 15%;
 }
-.post__dropdown {
-	/* margin: auto; 
-	float: right;
-	margin-top: 40%;  */
+
+.post__navbar .post__dropdown {
+	margin: auto;
+	float: left;
+	margin-top: 40%;
 	margin-top: 10px;
 	position: relative;
-	width: 1000px;
+	width: 15%;
 }
 
 .post__navbar .post__submit .button:hover {
@@ -552,7 +551,7 @@ button {
 	cursor: pointer;
 	border-radius: 5px;
 	float: left;
-	justify-content: start;
+	justify-content: center;
 }
 
 /* The container <div> - needed to position the dropdown content */
