--- a/recipebox.client/src/App.css
+++ b/recipebox.client/src/App.css
@@ -784,117 +784,66 @@ button {
 	width: 100%;
 }
 
+.form-control {
+	display: inline-block;
+	width: 70%;
+	padding: 0.4rem;
+	font-size: 1.2rem;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	border-color: rgb(141, 231, 7);
+}
+
+input[type="file"]::-webkit-file-upload-button {
+	text-align: center;
+}
+
 /* File upload */
-.file-upload {
-	background-color: #ffffff;
-	width: 600px;
-	margin: 0 auto;
-	padding: 20px;
-}
-
-.file-upload-btn {
-	width: 100%;
-	margin: 0;
-	color: #fff;
-	background: #1fb264;
-	border: none;
-	padding: 10px;
-	border-radius: 4px;
-	border-bottom: 4px solid #15824b;
-	transition: all .2s ease;
-	outline: none;
-	text-transform: uppercase;
-	font-weight: 700;
-}
-
-.file-upload-btn:hover {
-	background: #1aa059;
-	color: #ffffff;
-	transition: all .2s ease;
-	cursor: pointer;
-}
-
-.file-upload-btn:active {
-	border: 0;
-	transition: all .2s ease;
-}
-
-.file-upload-content {
-	display: none;
+#formdiv {
 	text-align: center;
 }
-
-.file-upload-input {
-	position: absolute;
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	height: 100%;
-	outline: none;
-	opacity: 0;
-	cursor: pointer;
+#file {
+	color: green;
+	padding: 5px;
+	border: 1px dashed #123456;
+	background-color: #f9ffe5;
 }
-
-.image-upload-wrap {
-	margin-top: 20px;
-	border: 4px dashed #1fb264;
+#img {
+	width: 17px;
+	border: none;
+	height: 17px;
+	margin-left: -20px;
+	margin-bottom: 191px;
+}
+.upload {
+	width: 100%;
+	height: 30px;
+}
+.previewBox {
+	text-align: center;
 	position: relative;
+	width: 150px;
+	height: 150px;
+	margin-right: 10px;
+	margin-bottom: 20px;
+	float: left;
 }
-
-.image-dropping,
-.image-upload-wrap:hover {
-	background-color: #1fb264;
-	border: 4px dashed #ffffff;
+.previewBox img {
+	height: 150px;
+	width: 150px;
+	padding: 5px;
+	border: 1px solid rgb(232, 222, 189);
 }
-
-.image-title-wrap {
-	padding: 0 15px 15px 15px;
-	color: #222;
-}
-
-.drag-text {
-	text-align: center;
-}
-
-.drag-text h3 {
-	font-weight: 100;
-	text-transform: uppercase;
-	color: #15824b;
-	padding: 60px 0;
-}
-
-.file-upload-image {
-	max-height: 200px;
-	max-width: 200px;
-	margin: auto;
-	padding: 20px;
-}
-
-.remove-image {
-	width: 200px;
-	margin: 0;
-	color: #fff;
-	background: #cd4535;
-	border: none;
-	padding: 10px;
-	border-radius: 4px;
-	border-bottom: 4px solid #b02818;
-	transition: all .2s ease;
-	outline: none;
-	text-transform: uppercase;
-	font-weight: 700;
-}
-
-.remove-image:hover {
-	background: #c13b2a;
-	color: #ffffff;
-	transition: all .2s ease;
+.delete {
+	color: red;
+	font-weight: bold;
+	position: absolute;
+	top: 0;
 	cursor: pointer;
-}
-
-.remove-image:active {
-	border: 0;
-	transition: all .2s ease;
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	background: #ccc;
 }
 
 /* Font awesome */
