--- a/recipebox.client/src/App.css
+++ b/recipebox.client/src/App.css
@@ -168,7 +168,20 @@ img {
 	display: inline-block;
 	background: var(--light-color);
 	color: #333;
-	padding: 0.6rem 1.8rem;
+	padding: 0.4rem 1.3rem;
+	font-size: 1rem;
+	border: none;
+	cursor: pointer;
+	margin-right: 0.5rem;
+	transition: opacity 0.2s ease-in;
+	outline: none;
+}
+
+.upload_photo {
+	display: inline-block;
+	background: var(--light-color);
+	color: #333;
+	padding: 0.7rem 1.7rem;
 	font-size: 1rem;
 	border: none;
 	cursor: pointer;
@@ -244,6 +257,7 @@ img {
 	border: #ccc solid 1px;
 }
 
+.upload_photo:hover,
 .lnk:hover,
 .btn:hover {
 	opacity: 0.8;
@@ -784,20 +798,6 @@ button {
 	width: 100%;
 }
 
-.form-control {
-	display: inline-block;
-	width: 70%;
-	padding: 0.4rem;
-	font-size: 1.2rem;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	border-color: rgb(141, 231, 7);
-}
-
-input[type="file"]::-webkit-file-upload-button {
-	text-align: center;
-}
-
 /* File upload */
 #formdiv {
 	text-align: center;
@@ -844,6 +844,20 @@ input[type="file"]::-webkit-file-upload-button {
 	height: 20px;
 	border-radius: 50%;
 	background: #ccc;
+}
+
+.form-control {
+	display: inline-block;
+	width: 70%;
+	padding: 0.4rem;
+	font-size: 1.2rem;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	border-color: rgb(141, 231, 7);
+}
+
+input[type="file"]::-webkit-file-upload-button {
+	text-align: center;
 }
 
 /* Font awesome */
