--- a/recipebox.client/src/App.css
+++ b/recipebox.client/src/App.css
@@ -941,6 +941,23 @@ input[type="file"]::-webkit-file-upload-button {
 	text-align: center;
 }
 
+.thumb-style button {
+	position: absolute;
+	padding: 12px;
+	border-color: black;
+	color: black;
+	background-color: rgb(235, 92, 92);
+	border-radius: 5px;
+	/* transition: border .24s ease-in-out; */
+}
+
+.thumb-style button:hover {
+	cursor: pointer;
+	transition: border .24s ease-in-out;
+	opacity: 0.8;
+	outline: none;
+}
+
 /* Font awesome */
 .icon-a {
 	background: white;
