pagination css now responsive

--- a/recipebox.client/src/App.css
+++ b/recipebox.client/src/App.css
@@ -29,153 +29,6 @@
 	align-items: center;
 }
 
-.pagination {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 480px;
-	height: 70px;
-	padding: 15px 35px;
-	background: #fff;
-	border-radius: 50px;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.125);
-}
-
-.pagination ul {
-	display: flex;
-	text-align: center;
-}
-
-.pagination ul li {
-	width: 50px;
-	height: 40px;
-	line-height: 40px;
-	margin: 0 8px;
-	background: #fff;
-	color: #000;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-	cursor: pointer;
-	border-radius: 5px;
-}
-
-.pagination ul li:first-child,
-.pagination ul li:last-child,
-.pagination ul li:nth-child(2),
-.pagination ul li:nth-child(9) {
-	border-radius: 0;
-	border-top-left-radius: 20px;
-	border-bottom-right-radius: 20px;
-}
-
-/* .pagination ul li:last-child {
-	border-radius: 0;
-	border-top-right-radius: 20px;
-	border-bottom-left-radius: 20px;
-} */
-
-.pagination ul li:hover,
-.pagination ul li.active {
-	background: #fd4141;
-	color: #fff;
-}
-
-/* .pagination {
-	display: inline-block;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	margin: 0 auto;
-	width: 80%;
-}
-
-.pagination a {
-	color: black;
-	float: left;
-	padding: 8px 16px;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	text-decoration: none;
-}
-
-.pagination a:hover:not(.active) {
-	background-color: #ddd;
-} */
-
-/* .boxxed {
-	box-sizing: border-box;
-	border-radius: 5px;
-	border-style: solid;
-	border-color: black;
-	height: 380px;
-	margin: 0;
-	padding: 0;
-	background-color: rgba(231, 224, 238, 0.685);
-
-	overflow: auto;
-	padding-top: 1px;
-	margin-top: -1px;
-}
-
-.thumbsContainer {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	margin-top: 16;
-	justify-content: center;
-}
-
-.thumb {
-	display: inline-flex;
-	border-radius: 2;
-	border: 1px solid #eaeaea;
-	margin-bottom: 8;
-	margin-right: 8;
-	width: 300;
-	height: 300;
-	padding: 4;
-	box-sizing: border-box;
-}
-
-.thumbInner {
-	display: flex;
-	min-width: 0;
-	overflow: hidden;
-}
-
-.thumbImg {
-	display: block;
-	width: auto;
-	height: 100%;
-}
-
-.baseStyle {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	padding: 20px;
-	border-width: 2;
-	border-radius: 2;
-	border-color: #eeeeee;
-	border-style: dashed;
-	background-color: #fafafa;
-	color: #bdbdbd;
-	outline: none;
-	transition: border .24s ease-in-out;
-}
-
-.activeStyle {
-	border-color: #2196f3;
-}
-
-.acceptStyle {
-	border-color: #00e676;
-}
-
-.rejectStyle {
-	border-color: #ff1744;
-} */
-
 body {
 	font-family: 'Raleway', sans-serif;
 	font-size: 1rem;
@@ -833,6 +686,55 @@ button {
 
 .card__link:hover {
 	text-decoration: underline;
+}
+
+/* Pagination */
+.pagination {
+	/* position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%); */
+	margin: 0 auto;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	width: 480px;
+	height: 70px;
+	padding: 15px 35px;
+	background: #fff;
+	border-radius: 50px;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.125);
+}
+
+.pagination ul {
+	display: flex;
+	text-align: center;
+}
+
+.pagination ul li {
+	width: 50px;
+	height: 40px;
+	line-height: 40px;
+	margin: 0 8px;
+	background: #fff;
+	color: #000;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+	cursor: pointer;
+	border-radius: 5px;
+}
+
+.pagination ul li:first-child,
+.pagination ul li:last-child,
+.pagination ul li:nth-child(2),
+.pagination ul li:nth-child(9) {
+	border-radius: 0;
+	border-top-left-radius: 20px;
+	border-bottom-right-radius: 20px;
+}
+
+.pagination ul li:hover,
+.pagination ul li.active {
+	background: #fd4141;
+	color: #fff;
 }
 
 /* Post detailed */
