--- a/recipebox.client/src/App.css
+++ b/recipebox.client/src/App.css
@@ -1,3 +1,112 @@
+/* Cuisines */
+
+.cuisines {
+	margin: 0 auto;
+	max-width: 1500px;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	grid-area: 20px;
+	font-family: sans-serif;
+	column-gap: 10px;
+	row-gap: 20px;
+	transform: scale(0.8, 0.8) translate(0px, -12%);
+}
+
+.cuisine {
+	box-shadow: 0 0 30px rgba(245, 4, 4, 0.1);
+	margin-bottom: 20px;
+}
+
+.cuisine__image {
+	width: 100%;
+	height: 90%;
+	object-fit: cover;
+	display: block;
+	
+}
+
+.cuisine:hover img{
+	transform: scale(1.001, 1.001);
+	transition-duration: 500ms;
+	transition-timing-function: ease-out;
+	opacity: 0.8;
+}
+
+.cuisine__content {
+	line-height: 1.5;
+	font-size: 0.9em;
+	padding: 10px;
+	background: #fafafa;
+}
+
+.cuisine__header {
+	display: flex;
+	align-items: center;
+}
+
+.cuisine__content .h3:hover {
+	margin-top: 0;
+}
+
+.cuisine__content > p:first-of-type {
+	padding-bottom: 2%;
+	font-size: 1.3em;
+}
+
+.cuisine__content > p:last-of-type {
+	margin-top: 0;
+}
+
+/* End of cuisines */
+
+
+.dropdown2 {
+	position: relative;
+	font-family: Arial;
+	font-weight: 50px;
+	width: 200px;
+	padding: 0.4rem;
+	margin-left: -0.4rem;
+}
+
+.test2 {
+	width: 100%;
+	height: 30px;
+	padding: 0.2rem;
+	background-color: rgb(194, 206, 201);
+}
+
+
+.profile-posts {
+	grid-area: posts;
+}
+
+.profile-favourites {
+	grid-area: favourites;
+}
+
+/* .profile-posts h2,
+.profile-favourites h2 {
+	margin-bottom: 1rem;
+}
+
+.profile-posts > div,
+.profile-favourites > div {
+	margin-bottom: 1rem;
+	padding-bottom: 1rem;
+	border-bottom: #ccc 1px dotted;
+}
+
+.profile-posts > div:last-child,
+.profile-favourites > div:last-child {
+	border: 0;
+}
+
+.profile-posts p,
+.profile-favourites p {
+	margin: 0.5rem 0;
+} */
+
 /* .pagination2 {
 	position: relative;
 	margin: 0 auto;
@@ -76,6 +185,11 @@ body {
 
 a {
 	color: var(--primary-color);
+	text-decoration: none;
+}
+
+.user-links {
+	color: white;
 	text-decoration: none;
 }
 
@@ -218,6 +332,10 @@ img {
 	margin: 3rem 0;
 }
 
+.my-4 {
+	margin-left: 5px;
+}
+
 .btn {
 	display: inline-block;
 	background: var(--light-color);
@@ -336,6 +454,8 @@ img {
 
 .round-img {
 	border-radius: 100%;
+	/* width: 80px;
+	height: 125px; */
 }
 
 .line {
@@ -455,17 +575,66 @@ button {
 	margin-bottom: 1rem;
 }
 
+.profile-grid {
+	display: grid;
+	width: 80%;
+	margin: 0 auto;
+	margin-top: 15px;
+	grid-template-areas: 'top top' 'about about' 'posts favourites';
+	grid-gap: 1rem;
+}
+
+.profile-top {
+	grid-area: top;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
+
+.profile-top img {
+	width: 250px;
+}
+
+.profile-top .icons a {
+	color: #fff;
+	margin: 0 0.3rem;
+}
+
+.profile-top .icons a:hover {
+	color: var(--dark-color);
+}
+
+.profile-about a:hover {
+	color: rgb(46, 46, 35);
+}
+
+.profile-about {
+	grid-area: about;
+	text-align: center;
+}
+
+.profile-about .skills {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
+
 /* Posts search box, create ands filter */
 .post__navbar {
 	margin: 0 auto;
 	max-width: 1500px;
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
-	/* grid-template-columns: 700px 350px 400px; */
+	grid-template-columns: repeat(auto-fill, minmax(700px, 2fr));
+	/* grid-template-columns: auto auto; */
+	grid-template-rows: auto auto;
 	font-family: sans-serif;
 	column-gap: 10px;
-	background-color: rgb(163, 209, 223);
+	/* background-color: rgb(163, 209, 223); */
 	margin-bottom: 8px;
+	transform: scale(0.8, 0.8) translate(0px, -12%);
 }
 
 .post__navbar .post__submit {
@@ -482,6 +651,8 @@ button {
 	position: relative;
 	width: 15%;
 }
+
+
 
 .post__navbar .post__submit .button:hover {
 	background-color: #3e8e41;
@@ -513,17 +684,18 @@ button {
 /* Search bar */
 .search__wrapper {
 	line-height: 1.5;
-	max-width: 100%;
+	max-width: 80%;
 	width: 1050px;
 	padding: 15px;
 	margin-right: 10px;
-	/* border-radius: 5px; */
-	/* margin-top: 0.5px; */
 	display: flex;
-	background: rgba(172, 155, 155, 0.6);
-	justify-content: space-between;
+	background: rgba(16, 103, 161, 0.301);
+	justify-content: space-around;
 	position: relative;
 	float: left;
+
+	border-radius: 5px;
+	margin-top: 0.5px;
 }
 
 .search__wrapper > input:first-of-type {
@@ -537,7 +709,7 @@ button {
 
 .searchbtn {
 	background: #8df074;
-	width: 10%;
+	width: 8%;
 	border-radius: 5px;
 	position: relative;
 	cursor: pointer;
@@ -690,7 +862,7 @@ button {
 }
 
 .card {
-	box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 30px rgba(245, 4, 4, 0.1);
 }
 
 .card__image {
@@ -1071,7 +1243,7 @@ input[type="file"]::-webkit-file-upload-button {
 /* Mobile Styles */
 @media (max-width: 700px) {
 	.container {
-		margin-top: 5rem;
+		margin-top: 8rem;
 	}
 
 	.hide-sm {
