--- a/recipebox.client/src/App.css
+++ b/recipebox.client/src/App.css
@@ -1,5 +1,39 @@
-/* Cuisines */
+/* Tabs  */
+.tab {
+	overflow: hidden;
+	border: 1px solid #ccc;
+	background-color: #f1f1f1;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+  
+.tab button {
+	background-color: inherit;
+	float: left;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	padding: 14px 16px;
+	transition: 0.3s;
+}
 
+.tab button:hover {
+	background-color: #ddd;
+}
+
+.tab button.active {
+	background-color: #ccc;
+}
+
+.tabcontent {
+	display: none;
+	padding: 6px 12px;
+	border: 1px solid #ccc;
+	border-top: none;
+}
+
+
+/* Cuisines */
 .cuisines {
 	margin: 0 auto;
 	max-width: 1500px;
